refactor: winning number converted to array and swagger updated
