# src/apis/server.go
@@ -1,12 +1,20 @@
 package apis
 
 import (
+	"admin-service/docs"
+
 	"github.com/gin-gonic/gin"
+	swaggerfiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func NewServer(server Server) error {
 
 	r := gin.Default()
+
+	docs.SwaggerInfo.BasePath = "/api/v1"
+
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	// API end point
 	r.GET("/api/v1/user", server.userInfo)
@@ -16,7 +24,7 @@ func NewServer(server Server) error {
 	//r.GET("/api/v1/eventinfo/Winners", server.GetEventWinners)   will not work
 	r.POST("api/v1/event/AddWinner", server.addWinner)
 	r.POST("/api/v1/event/Add", server.addNewEvent)
-	r.DELETE("/api/v1/event/Delete", server.deleteEvent)
+	r.DELETE("/api/v1/event/:EventUID", server.deleteEvent)
 
 	return r.Run(server.Addr)
 }
